fix event item vertical align

--- a/src/style.scss
+++ b/src/style.scss
@@ -305,6 +305,7 @@ body {
 
 .zt-event {
     display: inline-block;
+    vertical-align:top;
     margin: 6px;
     position: relative;
     width: $item-w;
